--- a/the magic calculator/index.html
+++ b/the magic calculator/index.html
@@ -9,12 +9,12 @@
 <body>
     <div class="container">
         <div class="calculator">
-            <input type="text" id="input-box" placeholder="42*69">
+            <input type="text" id="input-box">
             <div id="calculator-keys">
                 <div class="row">
                     <div class="key c-key">C</div>
-                    <div class="key symbol">R</div>
                     <div class="key symbol">%</div>
+                    <div class="key symbol">√</div>
                     <div class="key symbol">/</div>
                 </div>
                 <div class="row">
