UI update and readjusting the keys

--- a/the magic calculator/index.html
+++ b/the magic calculator/index.html
@@ -15,31 +15,31 @@
                     <div class="key c-key">C</div>
                     <div class="key symbol">%</div>
                     <div class="key symbol">√</div>
-                    <div class="key symbol">/</div>
+                    <div class="key symbol">±</div>
                 </div>
                 <div class="row">
                     <div class="key">7</div>
                     <div class="key">8</div>
                     <div class="key">9</div>
-                    <div class="key symbol">x</div>
+                    <div class="key symbol">/</div>
                 </div>
                 <div class="row">
                     <div class="key">4</div>
                     <div class="key">5</div>
                     <div class="key">6</div>
-                    <div class="key symbol">-</div>
+                    <div class="key symbol">x</div>
                 </div>
                 <div class="row">
                     <div class="key">1</div>
                     <div class="key">2</div>
                     <div class="key">3</div>
-                    <div class="key symbol stretched">+</div>
+                    <div class="key symbol">-</div>
                 </div>
                 <div class="row">
                     <div class="key zero-key">0</div>
-                    <div class="key">00</div>
                     <div class="key">.</div>
-                    <div class="key symbol stretched">=</div>
+                    <div class="key equal-key symbol stretched">=</div>
+                    <div class="key symbol stretched">+</div>
                 </div>
             </div>
         </div>
